WIP Generic resource requirments
